
2022-10-10  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: add COB_CORE_FILENAME and adjust COB_CORE_ON_ERROR

2022-07-01  Simon Sobisch <simonsobisch@gnu.org>

	* general: removed alias VALUES=VALUE, now a separate word

2022-06-10  Ron Norman <rjn@inglenet.com>

	* general: add 'defaultbyte'

2022-02-07  David Declerck <david.declerck@ocamlpro.com>

	* gcos-strict.conf, gcos.conf, gcos.words: added config files for
	  GCOS 7 (Bull) dialect

2021-11-14  Ron Norman <rjn@inglenet.com>

	* mf.words: Add MF specific names B-EXOR, B-LEFT, B-RIGHT for bit
			operations

2021-11-09  Ron Norman <rjn@inglenet.com>

	* Added 'record-sequential-advancing' initial value

2021-10-01  Ron Norman <rjn@inglenet.com>

	* runtime.cfg: Removed the COB_MF_LS_xxx options and replaced COB_MF_FILES
	  with COB_FILE_FORMAT

2021-09-28  Simon Sobisch <simonsobisch@gnu.org>

	* lax.conf-inc: set synchronized-clause to be only ignored if the
	  dialect including this has it set to error/unconformable

2021-09-17  Simon Sobisch <simonsobisch@gnu.org>

	* cobol2002.words, cobol2014.words: fixed missing aliases THROUGH=THRU,
	  CORR=CORRESPONDING, COMPUTATIONAL*=COMP*, QUOTES=QUOTE, SYNC=SYNCHRONIZED

2021-09-14  Simon Sobisch <simonsobisch@gnu.org>

	* general: added odoslide, active in bs200, ibm, mvs (previously a
	  compile flag only)
	* bs2000-strict.conf: adjusted complex-odo to "yes"

2021-08-31  Simon Sobisch <simonsobisch@gnu.org>

	* acu.words, bs2000.words, cobol85.words, ibm.words, mf.words, mvs.words,
	  realia.words, rm.words: fixed missing aliases CORR=CORRESPONDING,
	  COMPUTATIONAL*=COMP*, QUOTES=QUOTE, SYNC=SYNCHRONIZED, THROUGH=THRU
	* ibm.words: updated to Enterprise COBOL 6.3, now includes a lot of
	  ISO2002 functions and HEX/BIT conversion functions
	* mf.words: updated to Visual COBOL 6.0, similar additions to ibm,
	  removed ISO2002-only words
	* acu.words: updated to ACUCOBOL-GT 10.4, now with XML and JSON
	  statements from MF/IBM
