@@ -205,6 +205,7 @@ move-figurative-quote-to-numeric:	archaic
 multiple-file-tape-clause:		unconformable
 next-sentence-phrase:			archaic
 odo-without-to:				unconformable
+odo-last-varlen:			ok
 padding-character-clause:		obsolete
 section-segments:			unconformable
 stop-literal-statement:			unconformable
