@@ -206,6 +206,7 @@ move-figurative-quote-to-numeric:	obsolete
 multiple-file-tape-clause:		unconformable
 next-sentence-phrase:			archaic
 odo-without-to:				unconformable
+odo-last-varlen:			ok
 padding-character-clause:		unconformable
 section-segments:			unconformable
 stop-literal-statement:			unconformable
