@@ -205,6 +205,7 @@ move-figurative-quote-to-numeric:	ok
 multiple-file-tape-clause:		obsolete
 next-sentence-phrase:			archaic
 odo-without-to:				unconformable
+odo-last-varlen:			skip
 padding-character-clause:		ok
 section-segments:			obsolete
 stop-literal-statement:			obsolete
