@@ -225,6 +225,7 @@ move-figurative-quote-to-numeric:	obsolete
 multiple-file-tape-clause:		obsolete
 next-sentence-phrase:			archaic
 odo-without-to:				warning
+odo-last-varlen:			ok
 padding-character-clause:		obsolete
 occurs-max-length-without-subscript:	no 
 section-segments:			ignore
