@@ -83,6 +83,7 @@ move-figurative-quote-to-numeric:	+archaic
 multiple-file-tape-clause:		+obsolete
 next-sentence-phrase:			+archaic
 odo-without-to:				+warning
+odo-last-varlen:			ok
 reference-bounds-check:			+warning
 padding-character-clause:		+obsolete
 section-segments:			+ignore
