@@ -214,6 +214,7 @@ move-figurative-quote-to-numeric:	archaic		# not verified yet
 multiple-file-tape-clause:		warning		# should not be used ...
 next-sentence-phrase:			archaic
 odo-without-to:				unconformable
+odo-last-varlen:			unconformable
 padding-character-clause:		ok
 section-segments:			unconformable	# complete module removed
 # reportwriter and communication:  complete modules removed
