@@ -1435,7 +1435,7 @@ typedef struct __cob_module {
 #define COB_DIALECT_IBM		6
 #define COB_DIALECT_MF		7
 #define COB_DIALECT_MVS		8
-#define COB_DIALECT_RELIA	9
+#define COB_DIALECT_REALIA	9
 #define COB_DIALECT_RM		10
 #define COB_DIALECT_XOPEN	11
 #define COB_DIALECT_GCOS	12
